# ptaui

./: CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.claude/hooks/: session-start.sh
.github/workflows/: ci.yaml
examples/: demo.beancount  demo3year.beancount
src/: app.rs  config.rs  events.rs  git.rs  main.rs
src/beancount/: csv.rs  mod.rs  parser.rs  validator.rs  writer.rs
src/ui/: account_filter.rs  add_account.rs  add_tx.rs  category_transactions.rs  csv_import.rs  dashboard.rs  delete_tx.rs  mod.rs  reports.rs  startup.rs  transactions.rs  tx_account_filter.rs
