[package]
name = "ptaui"
version = "0.1.0"
edition = "2021"
description = "Plain text accounting TUI powered by beancount"

[[bin]]
name = "ptaui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-float"] }
csv = "1"
